# codex-autogoal

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml
docs/: RELEASING.md
scripts/: install.sh  uninstall.sh
src/codex_autogoal/: __init__.py  attachment.py  cli.py  config.py  duration.py  job_cli.py  job_runner.py  locking.py  paths.py  process.py  protocol.py  resume.py  runner.py  state.py  watcher.py
src/codex_autogoal/hooks/: __init__.py  pre_tool_use.py  stop.py
templates/: autogoal-protocol.md  config-hook.toml
tests/: test_attachment.py  test_job_runner.py  test_locking.py  test_pre_tool_use.py  test_protocol.py  test_resume.py  test_security_boundaries.py  test_state.py  test_stop_hook.py  test_watcher.py
tests/integration/: fake_codex.py  test_cancel_flow.py  test_continue_flow.py  test_fake_codex_process.py  test_wait_resume_flow.py
